[gd_scene load_steps=21 format=3 uid="uid://k0ben8lncsj7"]

[ext_resource type="Script" path="res://Main/PopupFileManager/scripts/popupFileManager.gd" id="1_he5df"]
[ext_resource type="PackedScene" uid="uid://c0h36q7mxwork" path="res://animation/animation.tscn" id="2_w73c2"]
[ext_resource type="Script" path="res://Main/PopupFileManager/scripts/TouchScroll.gd" id="3_11r0r"]
[ext_resource type="Script" path="res://Main/PopupFileManager/scripts/import.gd" id="4_606bb"]
[ext_resource type="Script" path="res://Main/PopupFileManager/scripts/open.gd" id="5_tcidf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekgig"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvh6j"]
bg_color = Color(0.027451, 0.027451, 0.027451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5af4"]
content_margin_left = 15.0
content_margin_top = 0.0
content_margin_right = 15.0
content_margin_bottom = 0.0
bg_color = Color(0.533333, 0.898039, 0, 1)
border_color = Color(0.603922, 0.603922, 0.603922, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.12549)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rclf3"]
content_margin_left = 15.0
content_margin_top = 0.0
content_margin_right = 15.0
content_margin_bottom = 0.0
bg_color = Color(0.580392, 0.972549, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.054902)
shadow_size = 30
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucuvl"]
content_margin_left = 15.0
content_margin_top = 0.0
content_margin_right = 15.0
content_margin_bottom = 0.0
bg_color = Color(0.305882, 0.52549, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.0941176)
shadow_size = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ius0y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_go8ho"]
content_margin_left = 20.0
content_margin_top = 5.0
content_margin_right = 20.0
content_margin_bottom = 5.0
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.282353)
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pgnk7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toxoj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpbiq"]

[sub_resource type="Theme" id="Theme_gr0kg"]
OptionButton/styles/hover = SubResource("StyleBoxFlat_toxoj")
PopupPanel/styles/panel = SubResource("StyleBoxFlat_dpbiq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0olb"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[sub_resource type="Animation" id="Animation_kxkek"]
resource_name = "flip"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/popup/BoxContainer/Control/Panel/ScrollContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/popup/BoxContainer/Control/Panel/ScrollContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, -14, -401, -0.6, 12.5, 0.4, -1.5),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_b84cu"]
resource_name = "open"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/popup/BoxContainer/Control/Panel/ScrollContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/popup/BoxContainer/Control/Panel/ScrollContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(250, -0.25, 0, 0, -232, 0, -0.8, 1, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jemld"]
_data = {
"flip": SubResource("Animation_kxkek"),
"open": SubResource("Animation_b84cu")
}

[node name="popupFileManager" type="Control" node_paths=PackedStringArray("UIfilecontainer", "lineedit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_he5df")
UIfilecontainer = NodePath("Control/popup/BoxContainer/Control/Panel/ScrollContainer/BoxContainer")
lineedit = NodePath("Control/popup/BoxContainer/pathPanel/v/h/LineEdit")
allowedTypes = PackedStringArray("proj")
typecheck = true

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" parent="." instance=ExtResource("2_w73c2")]
layout_mode = 1

[node name="popup" type="Panel" parent="Control"]
clip_children = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.052
anchor_top = 0.052
anchor_right = 0.951
anchor_bottom = 0.922
offset_left = -0.144001
offset_top = 0.00389862
offset_right = -0.171997
offset_bottom = -0.0078125
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ekgig")

[node name="BoxContainer" type="BoxContainer" parent="Control/popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
vertical = true

[node name="pathPanel" type="Panel" parent="Control/popup/BoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dvh6j")

[node name="v" type="BoxContainer" parent="Control/popup/BoxContainer/pathPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="Label" type="Label" parent="Control/popup/BoxContainer/pathPanel/v"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "افتح ملف"
horizontal_alignment = 1

[node name="h" type="BoxContainer" parent="Control/popup/BoxContainer/pathPanel/v"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="up" type="Button" parent="Control/popup/BoxContainer/pathPanel/v/h"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_d5af4")
theme_override_styles/hover = SubResource("StyleBoxFlat_rclf3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ucuvl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ius0y")
text = "  ^  "

[node name="LineEdit" type="LineEdit" parent="Control/popup/BoxContainer/pathPanel/v/h"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.788235, 0.788235, 0.788235, 1)
theme_override_colors/font_selected_color = Color(0.686275, 0.686275, 0.686275, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.517647, 0.517647, 0.517647, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_go8ho")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pgnk7")
text = "/sdcard/projects"

[node name="OptionButton" type="OptionButton" parent="Control/popup/BoxContainer/pathPanel/v/h"]
layout_mode = 2
theme = SubResource("Theme_gr0kg")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_d5af4")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5af4")
theme_override_styles/hover = SubResource("StyleBoxFlat_d5af4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5af4")
item_count = 3
selected = 0
popup/item_0/text = "/"
popup/item_0/id = 0
popup/item_1/text = "/sdcard"
popup/item_1/id = 1
popup/item_2/text = "/home"
popup/item_2/id = 2

[node name="Control" type="Control" parent="Control/popup/BoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Control/popup/BoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a0olb")

[node name="ScrollContainer" type="ScrollContainer" parent="Control/popup/BoxContainer/Control/Panel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_right = -24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.4
theme_override_styles/panel = SubResource("StyleBoxFlat_a0olb")
scroll_deadzone = 5
script = ExtResource("3_11r0r")

[node name="BoxContainer" type="BoxContainer" parent="Control/popup/BoxContainer/Control/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
vertical = true

[node name="filepanel" type="Panel" parent="Control/popup/BoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dvh6j")

[node name="BoxContainer" type="BoxContainer" parent="Control/popup/BoxContainer/filepanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 11.0
offset_right = -17.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="filebox" type="BoxContainer" parent="Control/popup/BoxContainer/filepanel/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="cancel" type="Button" parent="Control/popup/BoxContainer/filepanel/BoxContainer/filebox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_d5af4")
theme_override_styles/hover = SubResource("StyleBoxFlat_rclf3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ucuvl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ius0y")
text = "الغاء"
script = ExtResource("4_606bb")

[node name="open" type="Button" parent="Control/popup/BoxContainer/filepanel/BoxContainer/filebox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_d5af4")
theme_override_styles/hover = SubResource("StyleBoxFlat_rclf3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ucuvl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ius0y")
text = "فتح
"
script = ExtResource("5_tcidf")

[node name="filesanim" type="AnimationPlayer" parent="."]
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_jemld")
}

[connection signal="on_close" from="Control" to="." method="_on_control_on_close"]
[connection signal="pressed" from="Control/popup/BoxContainer/pathPanel/v/h/up" to="." method="_on_up_pressed"]
[connection signal="text_submitted" from="Control/popup/BoxContainer/pathPanel/v/h/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="item_selected" from="Control/popup/BoxContainer/pathPanel/v/h/OptionButton" to="." method="_on_option_button_item_selected"]
